--- a/src/style.css
+++ b/src/style.css
@@ -39,3 +39,10 @@
 body {
     font-family: "Lexend", serif;
 }
+
+.dog-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 16px;
+    padding: 20px;
+}
