--- a/src/style.css
+++ b/src/style.css
@@ -45,3 +45,12 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
 }
+
+@media (max-width: 604px) {
+    .dog-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
